syntax = "proto3";

package order;

option go_package = "./pkg/pb";

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse){}
}

message CreateOrderRequest {
    int64 productid=1;
    int64 quantity=2;
    int64 userid=3;
}

message CreateOrderResponse {
    int64 status=1;
    string error=2;
    int64 id=3;
}